--- a/hometask_8/gateway/src/main/resources/application.yaml
+++ b/hometask_8/gateway/src/main/resources/application.yaml
@@ -23,6 +23,14 @@ spring:
             - StripPrefix=1
             - PrefixPath=/web-market-core
             - JwtAuthFilter
+        - id: stat-service
+          uri: http://localhost:8888/
+          predicates:
+            - Path=/stat/**
+          filters:
+            - StripPrefix=1
+            - PrefixPath=/web-market-stat
+            - JwtAuthFilter
         - id: cart-service
           uri: http://localhost:8166/
           predicates:
@@ -39,7 +47,6 @@ spring:
             - StripPrefix=1
             - PrefixPath=/web-market-auth
             - JwtAuthFilter
-
 jwt:
   secret: h4f8093h4f983yhrt9834hr0934hf0hf493g493gf438rh438th34g34g
 
